# zksync_tools

./: .gitmodules  Dockerfile  README.md  requirements.txt
experiment_4337/: README.md
experiment_4337/contracts/src/: DummyAccount.sol
governance/: Cargo.toml  README.md
governance/src/: main.rs
kzg/: understand.py
kzg/testdata/: example_blob.json  other_example_blob.json  single_blob.json
ohbender/: .gitignore  1.fri  1.snark  2.fri  3.fri  4.fri  Cargo.toml  README.md  first_oracle  rust-toolchain  second_oracle
ohbender/contract/: README.md
ohbender/contract/script/: Counter.s.sol
ohbender/contract/src/: DualVerifier.sol  L1VerifierFflonk.sol  L1VerifierPlonk.sol  SetVerifierHelper.sol
ohbender/contract/test/: Counter.t.sol  Merkle.t.sol
ohbender/src/: batches.rs  fri.rs  main.rs  runner.rs
ohbender/tmp_results/: merged_1.snark  merged_2.snark  merged_3.snark
operator/: README.md  app.py  calldata_utils.py  config.json  pubdata.py  shared_bridge_storage.py  system_storage.py  utils.py
operator/static/: other_style.css  style.css  test.html
operator/templates/: batch.html  box.html  home.html  shared_bridge.html  single_bridge.html  system.html
prove_execute/: Cargo.toml  README.md
prove_execute/src/: execute.rs  l1_merkle.rs  main.rs  prove.rs  snark.rs
simple_interop/: Cargo.toml  README.md
simple_interop/src/: main.rs
tx_prover/: keccak.py  main.py  merkle_proof.py  prover.py  pubdata.py
tx_prover/testdata/: calldata.json  merkle_proof.json  prove_calldata.json
