[package]
name = "governance"
version = "0.1.0"
edition = "2024"

[dependencies]


alloy = { version = "1.0.1", features = ["full"] }
#alloy-dyn-abi = "0.8.0"
eyre = "*"
tokio = { version="1", features = ["rt-multi-thread"]}
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
colored = "2.0"
futures = "0.3"
names = "0.14"
lazy_static = "1.4"
hex = "0.4"
clap = { version = "4.5.21", features = ["derive"] }

base64 = "0.21.7"
bincode = "1.3.3"
