[package]
name = "ohbender"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.21.7"
bincode = "1.3.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.67"

crypto_codegen = { package = "zksync_solidity_vk_codegen", version = "=0.32.1" }
circuit_definitions = "=0.152.2"
bellman = { package = "zksync_bellman", version = "=0.32.1" }
execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag="v0.3.1" }
cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", tag="v0.3.1" }
hex = "0.4"
clap = {version = "4.2.2", features = ["derive"] }
