[package]
name = "simple_interop"
version = "0.1.0"
edition = "2024"

[dependencies]

clap = {version = "4.2.2", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

reqwest = { version = "0.11", features = ["json", "blocking"] }
alloy = { version = "1.0.1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.67"

hex = "0.4"